--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "compile": "node build/scripts/compile",
     "build": "npm run clean && cross-env NODE_ENV=production npm run compile",
-    "start": "cross-env NODE_ENV=development node build/scripts/start",
+    "start": "cross-env NODE_ENV=development node-dev build/scripts/start",
     "test": "cross-env NODE_ENV=test karma start build/karma.config",
     "test:watch": "npm test -- --watch",
     "lint": "eslint .",
@@ -21,9 +21,12 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha",
+    "cheerio": "^1.0.0-rc.2",
     "compression": "^1.6.2",
+    "ejs": "^2.5.7",
     "express": "^4.14.0",
     "moment": "^2.18.1",
+    "node-dev": "^3.1.3",
     "object-assign": "^4.1.1",
     "promise": "^7.1.1",
     "prop-types": "^15.5.10",
@@ -34,6 +37,7 @@
     "redbox-react": "^1.3.6",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
+    "superagent": "^3.5.2",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
